[gd_scene load_steps=10 format=2]

[ext_resource path="res://dash-Area2D.gd" type="Script" id=1]
[ext_resource path="res://Dood/Dasher001.png" type="Texture" id=2]
[ext_resource path="res://Dood/Dasher002.png" type="Texture" id=3]
[ext_resource path="res://Dood/Dasher003.png" type="Texture" id=4]
[ext_resource path="res://Dood/Dasher004.png" type="Texture" id=5]
[ext_resource path="res://Dood/Dasher005.png" type="Texture" id=6]
[ext_resource path="res://Dood/Dasher006.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "dash",
"speed": 20.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 25.0872, 7.1657 )

[node name="dash-Area2D" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

position = Vector2( -0.0565605, -0.0565624 )
frames = SubResource( 1 )
animation = "dash"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0.19253, -0.255234 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="2"]

position = Vector2( 0.0860759, 0.0391212 )
scale = Vector2( 2.45116, 0.771582 )
rect = Rect2( -10, -10, 20, 20 )

[connection signal="body_entered" from="." to="." method="_on_dashArea2D_body_entered"]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]


